...
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/teamNameView" />

    <TextView
        android:id="@+id/coachNameView"
        android:layout_width="106dp"
        android:layout_height="24dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="80dp"
        android:text="Coach Name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/creationDateTextView"
        android:layout_width="wrap_content"
...
